# origami-common

./: .gitignore  README.md  conftest.py  pyproject.toml
origami_common/: __init__.py  audit.py  decorators.py  helpers.py  mixins.py
tests/: settings.py  test_common.py
