[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "origami-common"
version = "0.1.0"
description = "Domain-agnostic Django web utilities (rate limiting, audit logging, JSON helpers, view mixins) shared across Tarmar projects."
requires-python = ">=3.11"
dependencies = ["Django>=4.2"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-django>=4.8"]

[tool.setuptools.packages.find]
include = ["origami_common*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = "-p no:cacheprovider"
